--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "1.5.2",
     "sequelize": "^5.21.7"
   },
