--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "1.5.2",
-    "sequelize": "^5.21.7"
+    "sequelize": "^5.21.7",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
