--- a/backend/package.json
+++ b/backend/package.json
@@ -4,21 +4,33 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "pretest": "cross-env NODE_ENV=test sequelize db:migrate",
+    "test": "cross-env NODE_ENV=test jest",
+    "postest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "1.5.2",
     "sequelize": "^5.21.7",
+    "sqlite3": "^4.2.0",
     "yup": "^0.28.5"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.3",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.3",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "supertest": "^4.0.2"
   }
 }
